# dmini

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  dmini.dmr  manifest.dmm  test_dmini.dmr
.github/workflows/: ci.yml  release.yml
_codeql_build_dir/: dmini_defs.h  dmini_header.c
_codeql_build_dir/dmf/: difs.dmf  difs_version.txt  dmini_version.txt  dmodex.dmf  dmodex_version.txt  example_app.dmf  example_app_version.txt  fatfs.dmf  fatfs_version.txt  flashfs.dmf  flashfs_version.txt  vfs.dmf  vfs_version.txt
apps/test_dmini/: CMakeLists.txt  README.md  test_dmini.c
docs/: dmini.md
include/: dmini.h
src/: dmini.c
